# crash-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build-docker-image.sh  build.rs  flake.nix  game_schema.fbs  generate-schema.sh  result  run-docker-image.sh
src/: main.rs
src/routes/: auth.rs  create_ws.rs  mod.rs  stats.rs
src/routes/utils/: auth_token_extractor.rs  error_response.rs  mod.rs  user_claims.rs
src/services/: balance.rs  balance_system.rs  crash_game.rs  crash_game_math.rs  env_settings.rs  game_server.rs  game_stats.rs  generate_username.rs  message_types.rs  mod.rs  peer.rs
src/utils/: flatbuffer_utils.rs  math_utils.rs  mod.rs
