[package]
name = "crash-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true

[dependencies]
actix = "0.13.3"
actix-cors = "0.6.4"
actix-web = "4"
actix-web-actors = "4.3.0"
chrono = "0.4.31"
derive_more = "0.99.18"
dotenv = "0.15.0"
env_logger = "0.11.3"
flatbuffers = "23.5.26"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
map-range = "0.1.2"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
